--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.png" />
     <title>Ryan Canfield.me</title>
   </head>
-  <body>
+  <body id="body">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div id="modal"></div>
     <script src="/src/index.jsx" type="module"></script>
   </body>
 </html>
